--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,12 @@
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="css/app.css" type="text/css" />
 
-    <script src="js/phaser.js"></script>
+    <script src="js/phaser.min.js"></script>
+    <script src="js/red_vs_black.js"></script>
     
-    <script src="js/app.js"></script>
 </head>
 <body>
     <h1>TypeScript HTML App</h1>
-
     <div id="content"></div>
 </body>
 </html>
